fpp_analysis/src/test/redef/component.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/component.fpp:2:19
  |
2 | passive component C { }
  |                   ^ redefinition of symbol C
  |
 ::: [ local path prefix ]/redef/component.fpp:1:1
  |
1 | passive component C { }
  | ----------------------- previous definition is here

